reduce max image size to 15vh for home page tiles to remove white space bug from odd sized images

--- a/style.css
+++ b/style.css
@@ -410,7 +410,7 @@ span.new-snowflake {
 .page-links {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-  padding: 1em 1em;
+  padding: 1em 1em 3em;
 }
 
 .inner-page-links {
@@ -432,7 +432,7 @@ span.new-snowflake {
 
 .page-link img {
   width: 100%;
-  max-height: 20vh;
+  max-height: 15vh;
   object-fit: cover;
 }
 
